fix: 修复 SDK 弹窗 z-index 低于引擎弹窗的问题

--- a/src/ui/sdkModal/SDKModal.less
+++ b/src/ui/sdkModal/SDKModal.less
@@ -1,3 +1,10 @@
+:global {
+  .ant-modal-mask,
+  .ant-modal-wrap {
+    z-index: 10000;
+  }
+}
+
 .SDKModal {
   :global {
     .ant-modal-content,
